--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,15 @@
   "author": "Zijing Jin",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "sharp": "^0.33.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^6.25.0",
+    "pg": "^8.11.3",
+    "redis": "^5.11.0",
+    "sharp": "^0.33.1",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
